[tool.poetry]
name = "test-blacksheep-pytest"
version = "0.1.0"
description = ""
authors = ["sinnwise"]
readme = "README.md"
packages = [{include = "test_blacksheep_pytest"}]

[tool.poetry.dependencies]
python = "^3.11"
blacksheep = "^1.2.17"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.0"
pydantic = "^1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
